--- a/数学分析/定理.md
+++ b/数学分析/定理.md
@@ -1,4 +1,8 @@
-# 定理 康托尔定理
+#目录
+
+[TOC]
+
+## 定理 康托尔定理
 > **card** $\color{green}{\mathbb{N}}$ < **card** $\color{green}{\mathbb{R}}$
 
 $\blacktriangleleft$ **我们来证明**，**闭区间**$[0,1]$**已经是不可数集**.
@@ -11,4 +15,4 @@ $\blacktriangleright$**推论**
 
 ---
 
-# 定理 
+##    ....定理 
