--- a/数学分析/典例.md
+++ b/数学分析/典例.md
@@ -24,11 +24,12 @@ $\begin{array}{cccccccc}
 **对于任意**  $n \in \mathbb{N}$ , **令**
 
 $$
-f(n)  = \left\{\begin{array}{ll}
-\frac{n}{2} & \text { if } n \text { is 偶, } \\
--\frac{n-1}{2} & \text { if } n \text { is 奇. }
-\end{array}\right.
-$$
+f(n)  = 
+\begin{cases} 
+\frac{n}{2}  &\text { if } n \text { is 偶} \\
+-\frac{n-1}{2}  ,&\text { if } n \text { is 奇 }
+\end{cases}
+$$ 
 
 **函数**  $f$  **对每一个** $ n \in \mathbb{N}$  **都有定义**, **并且每个自然数都恰好映射到一个整数**, **因此** $f: \mathbb{N} \rightarrow \mathbb{Z}$**是一个定义良好的函数**. **因为任意两个自然数都不会映射到同一个整** **数**, **所以**  $f$  **是单射**. **因为每一个整数都可以写成**  $\frac{n}{2}\left(n\right.$  **是偶数**) **或**  $-\frac{n-1}{2}(n $ **是** **奇数**), **所以**  $f$  **是满射**. **因此**,  $f$  **确实是一个双射**.  $\blacksquare$
  
