--- a/数学分析/典例.md
+++ b/数学分析/典例.md
@@ -15,11 +15,13 @@ $f: 2 \mapsto 1, f: 3 \mapsto-1, f: 4 \mapsto 2, f: 5 \mapsto-2, \cdots$
 
 **如果能给出该函数的形式化定义**, **那么我们就可以轻松地证明它是一个双射**.
 
-$\begin{cases}
+$$
+\begin{cases}
 1 & 2 & 3 & 4 & 5 & 6 & 7 & \cdots \\
 \downarrow & \downarrow & \downarrow & \downarrow & \downarrow & \downarrow & \downarrow & \\
 0 & 1 & -1 & 2 & -2 & 3 & -3 & \cdots
-\end{cases}$
+\end{cases}
+$$
 
 **对于任意**  $n \in \mathbb{N}$ , **令**
 
