--- a/数学分析/典例.md
+++ b/数学分析/典例.md
@@ -1,6 +1,6 @@
 # 目录
 - [目录](#目录)
-  - [证明$\mathbb{Z}$是可数集](#证明mathbbz是可数集)
+  - [证明Z是可数集](#证明Z是可数集)
   - [一极限题](#一极限题)
   - [3](#3)
 
@@ -45,40 +45,40 @@ $$
 ## 一极限题
 **设**  $y_{0} \geq 2, y_{n}=y_{n-1}^{2}-2(n \in \mathbb{N}), S_{n}=\frac{1}{y_{0}}+\frac{1}{y_{0} y_{1}}+\cdots+\frac{1}{y_{0} y_{1} \cdots y_{n}} $. **试证明** :  $\displaystyle\lim _{n \rightarrow+\infty} S_{n}=   \frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $
 
-$\blacktriangleleft$ **若**  $y_{0}=2 $, **则** $ y_{n}=2, n \in \mathbb{N} $. **此时**$$\displaystyle\lim _{n \rightarrow+\infty} S_{n}=\sum_{n=1}^{\infty} \frac{1}{2^{n}}=1=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $$.
+$\blacktriangleleft$ **若**  $y_{0}=2 $, **则** $ y_{n}=2, n \in \mathbb{N} $. **此时**$\displaystyle\lim _{n \rightarrow+\infty} S_{n}=\sum_{n=1}^{\infty} \frac{1}{2^{n}}=1=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $.
 
 **若**$y_{0}>2 $, **这时记** $ \alpha=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $, **此时** $ y_{0}=\alpha+\frac{1}{\alpha} $.
 
  **一般地**,$y_{n}=\alpha^{2^{n}}+\alpha^{-2^{n}}, n \in \mathbb{N}$ .
 
 **因此**
-$$
+$
 \begin{aligned}
 y_{0} y_{1} y_{2} \cdots y_{n} &=\left(\alpha+\alpha^{-1}\right)\left(\alpha^{2}+\alpha^{-2}\right)\left(\alpha^{2^{2}}+\alpha^{-2^{2}}\right) \cdots\left(\alpha^{2^{n}}+\alpha^{-2^{n}}\right) \\
 &=\frac{\alpha^{2^{n+1}}-\alpha^{-2^{n+1}}}{\alpha-\alpha^{-1}} \\
 &=\frac{\alpha}{\alpha^{2}-1} \cdot \frac{\alpha^{2^{n+2}}-1}{\alpha^{2^{n+1}}}
 \end{aligned}
-$$
+$
 **故**
-$$
+$
 \begin{aligned}
 \frac{1}{y_{0} y_{1} y_{2} \cdots y_{n}} &=\frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}}{\alpha^{2^{n+2}}-1} \\
 &=\frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}+1-1}{\alpha^{2^{n+2}}-1} \\
 &=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{n+1}}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
 \end{aligned}
-$$
+$
 **因此**
-$$
+$
 \begin{aligned}
 S_{n} &=\sum_{k=0}^{n} \frac{1}{y_{0} y_{1} y_{2} \cdots y_{k}} \\
 &=\sum_{k=0}^{n} \frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{k+1}}-1}-\frac{1}{\alpha^{2^{k+2}}-1}\right) \\
 &=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
 \end{aligned}
-$$
+$
 **注意到** $ \alpha<1$ , **因此**
-$$
+$
 \displaystyle\lim _{n \rightarrow \infty} S_{n}=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2}-1}+1\right)=\alpha=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} .\blacksquare
-$$
+$
 
 ---
 
