--- a/数学分析/典例.md
+++ b/数学分析/典例.md
@@ -43,7 +43,7 @@ $$
 ---
 
 ## 一极限题
-**设**  $y_{0} \geq 2, y_{n}=y_{n-1}^{2}-2(n \in \mathbb{N}), S_{n}=\frac{1}{y_{0}}+\frac{1}{y_{0} y_{1}}+\cdots+\frac{1}{y_{0} y_{1} \cdots y_{n}} $. **试证明** :  $\displaystyle\lim _{n \rightarrow+\infty} S_{n}=   \frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $
+**设**  $y_{0} \geq 2, y_{n}=y_{n-1}^{2}-2(n \in \mathbb{N}), S_{n}=\frac{1}{y_{0}}+\frac{1}{y_{0} y_{1}}+\cdots+\frac{1}{y_{0} y_{1} \cdots y_{n}} $. **试证明** :  $\displaystyle\lim_{n \rightarrow+\infty}S_{n}=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2}$
 
 $\blacktriangleleft$ **若**  $y_{0}=2 $, **则** $ y_{n}=2, n \in \mathbb{N} $. **此时**$$\displaystyle\lim _{n \rightarrow+\infty} S_{n}=\sum_{n=1}^{\infty} \frac{1}{2^{n}}=1=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} $$.
 
@@ -54,17 +54,18 @@ $\blacktriangleleft$ **若**  $y_{0}=2 $, **则** $ y_{n}=2, n \in \mathbb{N} $.
 **因此**
 $$
 \begin{aligned}
-y_{0} y_{1} y_{2} \cdots y_{n} &=\left(\alpha+\alpha^{-1}\right)\left(\alpha^{2}+\alpha^{-2}\right)\left(\alpha^{2^{2}}+\alpha^{-2^{2}}\right) \cdots\left(\alpha^{2^{n}}+\alpha^{-2^{n}}\right) \\
-&=\frac{\alpha^{2^{n+1}}-\alpha^{-2^{n+1}}}{\alpha-\alpha^{-1}} \\
-&=\frac{\alpha}{\alpha^{2}-1} \cdot \frac{\alpha^{2^{n+2}}-1}{\alpha^{2^{n+1}}}
+y_{0} y_{1} y_{2} \cdots y_{n} & = \left(\alpha+\alpha^{-1}\right)\left(\alpha^{2}+\alpha^{-2}\right)\left(\alpha^{2^{2}}+\alpha^{-2^{2}}\right) \cdots  \left(\alpha^{2^{n}}+\alpha^{-2^{n}}\right)  \\
+& = \frac{\alpha^{2^{n+1}}-\alpha^{-2^{n+1}}}{\alpha-\alpha^{-1}}  \\
+& = \frac{\alpha}{\alpha^{2}-1} \cdot \frac{\alpha^{2^{n+2}}-1}{\alpha^{2^{n+1}}}  \\
 \end{aligned}
-$$
+$$ 
+
 **故**
 $$
 \begin{aligned}
 \frac{1}{y_{0} y_{1} y_{2} \cdots y_{n}} &=\frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}}{\alpha^{2^{n+2}}-1} \\
-&=\frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}+1-1}{\alpha^{2^{n+2}}-1} \\
-&=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{n+1}}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
+& = \frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}+1-1}{\alpha^{2^{n+2}}-1} \\
+& = \frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{n+1}}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
 \end{aligned}
 $$
 **因此**
