--- a/数学分析/典例.md
+++ b/数学分析/典例.md
@@ -52,34 +52,36 @@ $\blacktriangleleft$ **若**  $y_{0}=2 $, **则** $ y_{n}=2, n \in \mathbb{N} $.
  **一般地**,$y_{n}=\alpha^{2^{n}}+\alpha^{-2^{n}}, n \in \mathbb{N}$ .
 
 **因此**
-$$
-\begin{aligned}
+$
+\begin{align}
 y_{0} y_{1} y_{2} \cdots y_{n} & = \left(\alpha+\alpha^{-1}\right)\left(\alpha^{2}+\alpha^{-2}\right)\left(\alpha^{2^{2}}+\alpha^{-2^{2}}\right) \cdots  \left(\alpha^{2^{n}}+\alpha^{-2^{n}}\right)  \\
 & = \frac{\alpha^{2^{n+1}}-\alpha^{-2^{n+1}}}{\alpha-\alpha^{-1}}  \\
 & = \frac{\alpha}{\alpha^{2}-1} \cdot \frac{\alpha^{2^{n+2}}-1}{\alpha^{2^{n+1}}}  \\
-\end{aligned}
-$$ 
+\end{align}
+$ 
 
 **故**
-$$
-\begin{aligned}
+$
+\begin{align}
 \frac{1}{y_{0} y_{1} y_{2} \cdots y_{n}} &=\frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}}{\alpha^{2^{n+2}}-1} \\
 & = \frac{\alpha^{2}-1}{\alpha} \cdot \frac{\alpha^{2^{n+1}}+1-1}{\alpha^{2^{n+2}}-1} \\
 & = \frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{n+1}}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
-\end{aligned}
-$$
+\end{align}
+$
 **因此**
-$$
-\begin{aligned}
+$
+\begin{align}
 S_{n} &=\sum_{k=0}^{n} \frac{1}{y_{0} y_{1} y_{2} \cdots y_{k}} \\
 &=\sum_{k=0}^{n} \frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2^{k+1}}-1}-\frac{1}{\alpha^{2^{k+2}}-1}\right) \\
 &=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2}-1}-\frac{1}{\alpha^{2^{n+2}}-1}\right)
-\end{aligned}
-$$
-**注意到** $ \alpha<1$ , **因此**
-$$
-\displaystyle\lim _{n \rightarrow \infty} S_{n}=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2}-1}+1\right)=\alpha=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} .\blacksquare
-$$
+\end{align}
+$
+
+
+**注意到** $\alpha<1$ , **因此**
+
+$\displaystyle\lim_{n \rightarrow \infty} S_{n}=\frac{\alpha^{2}-1}{\alpha}\left(\frac{1}{\alpha^{2}-1}+1\right)=\alpha=\frac{y_{0}-\sqrt{y_{0}^{2}-4}}{2} .\blacksquare$
+
 
 ---
 
