--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -3,14 +3,46 @@
 ---
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
+## 2022.7.13(...)
+【题】设  $\lambda_{1}, \cdots, \lambda_{n}$  为不同的实数, 且不同于  $0,-1,-2, \cdots$. 试证明
+$$
+\left|\begin{array}{cccc}
+\frac{1}{\lambda_{1}} & \frac{1}{\lambda_{2}} & \cdots & \frac{1}{\lambda_{n}} \\
+\frac{1}{\lambda_{1}+1} & \frac{1}{\lambda_{2}+1} & \cdots & \frac{1}{\lambda_{n}+1} \\
+\vdots & \vdots & & \vdots \\
+\frac{1}{\lambda_{1}+n-1} & \frac{1}{\lambda_{2}+n-1} & \cdots & \frac{1}{\lambda_{n}+n-1}
+\end{array}\right|  \ne0     
+$$
+$\blacktriangleright$
 
-## 2022.7.12(...)
+
+## 2022.7.12
 
 【题】试求$\displaystyle\lim _{t \rightarrow 0^{+}} \frac{\displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}}{\ln t}$ $\blacktriangleright$
+
+$\blacktriangleleft$
+
+由级数收敛的积分判别法的证明可得
+
+$0 \leqslant \displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}-\int_{1}^{+\infty} \frac{\mathrm{e}^{-x^{2} t}}{x} \mathrm{~d} x \leqslant 1$    
+
+即
+
+$\begin{aligned}
+\displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}  & \underset{t \rightarrow 0^{+}}{\sim}  \int_{1}^{+\infty} \frac{\mathrm{e}^{-x^{2} t}}{x} \mathrm{~d} x \\ & =\int_{\sqrt{t}}^{+\infty} \frac{\mathrm{e}^{-y^{2}}}{y} \mathrm{~d} y \\ &=
+\int_{\sqrt{t}}^{1} \frac{\mathrm{d} x}{x}+\int_{\sqrt{t}}^{1} \frac{\mathrm{e}^{-x^{2}}-1}{x} \mathrm{~d} x+\int_{1}^{+\infty} \frac{\mathrm{e}^{-x^{2}}}{x} \mathrm{~d} x 
+\end{aligned}$
+
+不难证明第二个和第三个积分当 $t \rightarrow 0^{+}$ 时收敛.
+
+于是
+
+$\displaystyle\lim _{t \rightarrow 0^{+}} \frac{\displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}}{\ln t}=\lim _{t \rightarrow 0^{+}} \frac{\int_{\sqrt{t}}^{1} \frac{\mathrm{d} x}{x}}{\ln t}=-\frac{1}{2}   .  \blacksquare$    
+
 
 
 ## 2022.7.11
