--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,9 +6,15 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
+## 2022.7.14(...)
+【题】 若  $x+y+z=0$ , 证明:
 
-## 2022.7.13(...)
-【题】设  $\lambda_{1}, \cdots, \lambda_{n}$  为不同的实数, 且不同于  $0,-1,-2, \cdots$. 试证明
+$\frac{x^{2}+y^{2}+z^{2}}{2} \cdot \frac{x^{5}+y^{5}+z^{5}}{5}=\frac{x^{7}+y^{7}+z^{7}}{7}$.  $\blacktriangleright$
+
+
+
+## 2022.7.13
+【题】设  $\lambda_{1}, \cdots, \lambda_{n}$  为不同的实数, 且不同于  $0,-1,-2,\cdots,-(n-1)$. 试证明
 $$
 \left|\begin{array}{cccc}
 \frac{1}{\lambda_{1}} & \frac{1}{\lambda_{2}} & \cdots & \frac{1}{\lambda_{n}} \\
@@ -18,6 +24,27 @@ $$
 \end{array}\right|  \ne0     
 $$
 $\blacktriangleright$
+
+$\blacktriangleleft$反证法.假设该行列式等于零. 那么, 它是线性相关的.
+ 
+即存在不全为零的系数  $c_{0}, c_{1}, \cdots, c_{n-1}$ , 对所有  $i=1,2, \cdots, n$  有
+
+$\frac{c_{0}}{\lambda_{i}}+\frac{c_{1}}{\lambda_{i}+1}+\frac{c_{2}}{\lambda_{i}+2}+\cdots+\frac{c_{n-1}}{\lambda_{i}+(n-1)}=0$
+
+考虑函数$f(\lambda)=\frac{c_{0}}{\lambda}+\frac{c_{1}}{\lambda+1}+\cdots+\frac{c_{n-1}}{\lambda+(n-1)}$
+
+通分得$f(\lambda)=\frac{P(\lambda)}{\lambda(\lambda+1) \cdots(\lambda+(n-1))}$
+
+其中  $P(\lambda)$  是关于  $\lambda$  的次数不超过  $n-1$  的多项式.
+
+因  $f(\lambda_{i})=0$.  且  $\lambda_{i} \neq 0,-1, \cdots,-(n-1)$ , 则  $P\left(\lambda_{i}\right)=0$ ,
+即数  $\lambda_{1}, \cdots, \lambda_{n}$  是多项式  $P(\lambda)$  的根. 但多项式次数不超过  $n-1$ , 如果它不恒等于零的话, 就不可能有  n  个不同的根. 
+
+因此,  $P(\lambda) \equiv  0$ , 当  $\lambda \neq 0,-1, \cdots,-(n-1), f(\lambda)=0$ .由此得到,所有数  $c_{i}$  等于零.
+
+事实上, 若  $c_{i} \neq 0$ , 则当  $\lambda \rightarrow-i, \frac{c_{i}}{\lambda+i} \rightarrow \pm \infty, f(\lambda) \rightarrow \infty$  与  $f(\lambda)=0$  相矛盾. 于是, 我们证明了所有  $c_{i}$  等于零, 这与假设相矛盾.  $\blacksquare$
+
+
 
 
 ## 2022.7.12
