--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,10 +6,41 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.14(...)
+## 2022.7.15(...)
+【题】 已知数列$\{a_n\}:1,2,2,3,3,3,4,4,4,4,5,5,5,5,5, \cdots$
+
+试求$\displaystyle\lim _{n\to \infty}\frac{a_n}{\sqrt{n} }$ . $\blacktriangleright$
+
+
+
+
+
+
+## 2022.7.14
 【题】 若  $x+y+z=0$ , 证明:
 
 $\frac{x^{2}+y^{2}+z^{2}}{2} \cdot \frac{x^{5}+y^{5}+z^{5}}{5}=\frac{x^{7}+y^{7}+z^{7}}{7}$.  $\blacktriangleright$
+
+$\blacktriangleleft$考虑多项式  $P(t)=t^{3}+p t+q$ , 它的零点是  $x, y, z$ .
+
+于是$x^{2}+y^{2}+z^{2}=(x+y+z)^{2}-2(x y+z x+y z)=-2 p$ , 把$x^{3}=-p x-q, y^{3}=-p y-q, z^{3}=-p z-q$ ， 相加得
+
+$x^{3}+y^{3}+z^{3}=-3 q$，类似地（各乘$x,y,z$后相加）
+
+$x^{4}+y^{4}+z^{4}=-p\left(x^{2}+y^{2}+z^{2}\right)-q(x+y+z)=2 p^{2}$
+
+因此
+
+$\begin{aligned}
+x^{5}+y^{5}+z^{5}&=-p\left(x^{3}+y^{3}+z^{3}\right)-q\left(x^{2}+y^{2}+z^{2}\right)=5 p q \\
+x^{7}+y^{7}+z^{7}&=-p\left(x^{5}+y^{5}+z^{5}\right)-q\left(x^{4}+y^{4}+z^{4}\right) \\
+&=-5 p^{2} q-2 p^{2} q=-7 p^{2} q
+\end{aligned}$
+
+于是目中的关系式化为明显的
+
+$\frac{-2 p}{2} \cdot \frac{5 p q}{5}=\frac{-7 p^{2} q}{7}.\blacksquare$  
+
 
 
 
