--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,13 +6,34 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.15(...)
+## 2022.7.16(...)
+【题】令  $x$  是实数, 定义数列  $\left(x_{n}\right)_{n \geqslant 1}$  , $x_{1}=1$ , 对  $n \geqslant 1$ ,  $x_{n+1}=x^{n}+n x_{n}$ . 
+
+试求：$\displaystyle\prod_{n=1}^{\infty}\left(1-\frac{x^{n}}{x_{n+1}}\right)$ . $\blacktriangleright$
+
+
+
+
+## 2022.7.15
 【题】 已知数列$\{a_n\}:1,2,2,3,3,3,4,4,4,4,5,5,5,5,5, \cdots$
 
 试求$\displaystyle\lim _{n\to \infty}\frac{a_n}{\sqrt{n} }$ . $\blacktriangleright$
 
+$\blacktriangleleft$研究这个数列, 可见恰好对满足下式的  $m$  :
 
+$\frac{n^{2}-n}{2}+1 \leqslant m \leqslant \frac{n^{2}+n}{2}$
 
+数列的第  $m$  项是  $n$ .    因  $m$  与  $n$  是整数, 故不等式等价于
+
+$n^{2}-n+\frac{1}{4}<2 m<n^{2}+n+\frac{1}{4}$ ，求平方根得
+
+$n-\frac{1}{2}<\sqrt{2 m}<n+\frac{1}{2}$ , 即 $n<\sqrt{2 m}+\frac{1}{2}<n+1$.
+
+现在当且仅当  $n=\left\lfloor\sqrt{2 m}+\frac{1}{2}\right\rfloor$  时上式成立, 于是给出了数列通项公式
+
+$a_{m}=\left\lfloor\sqrt{2 m}+\frac{1}{2}\right\rfloor, m \geqslant 1$.
+
+从而$\displaystyle\lim _{n\to \infty}\frac{a_n}{\sqrt{n} }=\sqrt{2}$. $\blacksquare$
 
 
 
