--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,10 +6,30 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.16(...)
+## 2022.7.17(...)
+【题】试证明下列方程的实解只有两个: $4^{x}+6^{x^2}=5^x+5^{x^2}$ . $\blacktriangleright$
+
+
+
+
+## 2022.7.16
 【题】令  $x$  是实数, 定义数列  $\left(x_{n}\right)_{n \geqslant 1}$  , $x_{1}=1$ , 对  $n \geqslant 1$ ,  $x_{n+1}=x^{n}+n x_{n}$ . 
 
 试求：$\displaystyle\prod_{n=1}^{\infty}\left(1-\frac{x^{n}}{x_{n+1}}\right)$ . $\blacktriangleright$
+
+$\blacktriangleleft$置$P_{N}=\displaystyle\prod_{n=1}^{N}\left(1-\frac{x^{n}}{x_{n+1}}\right)=\prod_{n=1}^{N}\left(\frac{x_{n+1}-x^{n}}{x_{n+1}}\right)=\prod_{n=1}^{N}\left({\frac{nx_n}{x_{n+1}}}\right)=\frac{N!}{x_{N+1}}$
+
+于是
+
+$\frac{1}{P_{n+1}}-\frac{1}{P_{n}}=\frac{x_{n+2}}{(n+1) !}-\frac{x_{n+1}}{n !}=\frac{x_{n+2}-(n+1) x_{n+1}}{(n+1) !}=\frac{x^{n+1}}{(n+1) !}, n \geqslant 1$
+
+因此
+
+$\frac{1}{P_{N+1}}=\frac{1}{P_1}+\displaystyle\sum_{n=1}^{N}\left(\frac{1}{P_{n+1}}-\frac{1}{P_{n}}\right)=1+\frac{x}{1 !}+\frac{x^{2}}{2 !}+\cdots+\frac{x^{N+1}}{(N+1) !}\to e^{x},N\to \infty$
+
+故得 
+
+$\displaystyle\prod_{n=1}^{\infty}\left(1-\frac{x^{n}}{x_{n+1}}\right)=e^{-x}. \blacksquare$
 
 
 
