--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,10 +6,28 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.17(...)
+
+## 2022.7.18(...)
+【题】求满足下式的连续函数  $f:[0,1] \rightarrow \mathbb{R}$  :
+
+$\int_{0}^{1} f(x)(x-f(x)) \mathrm{d} x=\frac{1}{12}$ . $\blacktriangleright$
+
+
+
+
+## 2022.7.17
 【题】试证明下列方程的实解只有两个: $4^{x}+6^{x^2}=5^x+5^{x^2}$ . $\blacktriangleright$
 
+$\blacktriangleleft$首先注意到$x=1,x=0$是方程的两个解，下面证明没有第三个解。
 
+考虑函数$f(t)=t^{x^2}+(10-t)^x$. 由题设得$f(5)=f(6)$. 根据$\mathbf{Rolle}$定理，$\exists c\in (5,6),s.t.f'(c)=0$
+
+即$xc^{x^2-1}=(10-c)^{x-1}$， 这表明$x>0$.
+
+若  $x>1$ , 则  $x c^{x^{2}-1}>c^{x^{2}-1}>c^{x-1}>(10-c)^{x-1}$ , 这是不可能的, 因为在这不等式链中, 第1项与最后的项相等. 这里利用了事实$c>5$.
+
+
+若  $0<x<1$ , 则  $x c^{x^{2}-1}<x c^{x-1}$ . 我们来证明  $x c^{x-1}<(10-c)^{x-1}$ . 作代换  $y=x-1, y \in(-1,0)$ , 不等式可改写为  $y+1<\left(\frac{10-c}{c}\right)^{y}$ . 指数的底数小于 $1$ , 从而它递减, 而左边的线性函数递增. 两边在  $y=0$  时相等. 推出不等式. 利用它我们再断定  $x c^{x^{2}-1} \neq(10-c)^{x-1}$ . 这证明了题目中的方程的第3个解不存在. 因此已知方程的唯一解是$x=0$与$x=1. \blacksquare$
 
 
 ## 2022.7.16
