--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -7,10 +7,34 @@
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
-## 2022.7.18(...)
+## 2022.7.19(...)
+【题】证明:
+
+$\int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} \cos a x \mathrm{~d} x=\sqrt{\pi} \mathrm{e}^{-a^{2} / 4},a>0.\blacktriangleright$ 
+
+(488题)
+
+
+
+
+## 2022.7.18
 【题】求满足下式的连续函数  $f:[0,1] \rightarrow \mathbb{R}$  :
 
 $\int_{0}^{1} f(x)(x-f(x)) \mathrm{d} x=\frac{1}{12}$ . $\blacktriangleright$
+
+$\blacktriangleleft$将题目中的关系式改写为
+
+$\int_{0}^{1}\left(x f(x)-f^{2}(x)\right) \mathrm{d} x=\int_{0}^{1} \frac{x^{2}}{4} \mathrm{~d} x$
+
+移项得
+
+$\int_{0}^{1}\left(f^{2}(x)-x f(x)+\frac{x^{2}}{4}\right) \mathrm{d} x=0$
+
+配方得
+
+$\int_{0}^{1}\left(f(x)-\frac{x}{2}\right)^{2} \mathrm{~d} x=0$
+
+因非负连续函数  $\left(f(x)-\frac{x}{2}\right)^{2}$  是严格正的, 除了函数恒等于 $0$ . 可见满足题目条件的唯一函数是  $f(x)=\frac{x}{2}, x \in[0,1] . \blacksquare$
 
 
 
