--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -7,12 +7,42 @@
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
-## 2022.7.19(...)
+## 2022.7.20(...)
+【题】求满足以下条件的所有连续函数  $f: \mathbb{R} \rightarrow \mathbb{R}:$  对所有  $x \in \mathbb{R} ,  (f \circ f \circ f)(x)=x$ 
+
+$\blacktriangleright$ 
+
+（530+ 微分方程前）
+
+
+
+## 2022.7.19
 【题】证明:
 
 $\int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} \cos a x \mathrm{~d} x=\sqrt{\pi} \mathrm{e}^{-a^{2} / 4},a>0.\blacktriangleright$ 
 
-(488题)
+$\blacktriangleleft$由
+
+$\cos a x=1-\frac{(a x)^{2}}{2 !}+\frac{(a x)^{4}}{4 !}-\frac{(a x)^{6}}{6 !}+\cdots$，
+
+置$\int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} x^{2 n} \mathrm{~d} x=I_{n}$ .
+
+则用分部积分法得出递推公式  $I_{n}=\frac{2 n-1}{2} I_{n-1}$ .
+
+又$I_{0}=\int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} \mathrm{~d} x=\sqrt{\pi}$
+
+得
+
+$I_{n}=\frac{(2 n) ! \sqrt{\pi}}{4^{n} n !}$
+
+可见所要求的积分等于
+
+$\displaystyle\sum_{n=0}^{\infty}(-1)^{n} \frac{a^{2 n}}{(2 n) !} \cdot \frac{(2 n) ! \sqrt{\pi}}{4^{n} n !}=\sqrt{\pi} \sum_{n=0}^{\infty} \frac{\left(-\frac{a^{2}}{4}\right)^{n}}{n !}=\sqrt{\pi} \mathrm{e}^{-a^{2} / 4}$ .
+
+还需要说明一件事: 为何允许先展开然后求积分的和?     这是因为由各项绝对值积分组成的级数本身收敛:
+
+$\displaystyle\sum_{n=1}^{\infty} \frac{a^{2 n}}{(2 n) !} \int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} x^{2 n}=\sqrt{\pi} \sum_{1}^{\infty} \frac{\left(\frac{a^{2}}{4}\right)^{n}}{n !}=\sqrt{\pi} \mathrm{e}^{a^{2 / 4}}<\infty. \blacksquare$
+
 
 
 
