--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -3,16 +3,31 @@
 ---
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
+## 2022.7.21(...)
+【题】试求极限：$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n.\blacktriangleright$ 
 
-## 2022.7.20(...)
-【题】求满足以下条件的所有连续函数  $f: \mathbb{R} \rightarrow \mathbb{R}:$  对所有  $x \in \mathbb{R} ,  (f \circ f \circ f)(x)=x$ 
+（第九页）
 
-$\blacktriangleright$ 
+## 2022.7.20
+【题】求满足以下条件的所有连续函数  $f: \mathbb{R} \rightarrow \mathbb{R}:$  对所有  $x \in \mathbb{R} ,  (f \circ f \circ f)(x)=x.\blacktriangleright$ 
 
-（530+ 微分方程前）
+$\blacktriangleleft$若$f\left(x_{1}\right)=f\left(x_{2}\right)$ , 则  $x_{1}=f\left(f\left(f\left(x_{1}\right)\right)\right)=f\left(f\left(f\left(x_{2}\right)\right)\right)=x_{2}$ , 这证明了  $f$  是一对一的.
+
+因此  $f$  是连续双射函数, 从而一定是严格单调的.
+
+若  $f$  递减, 则  $f \circ f$  递增,  $f \circ f \circ f$  递减, 与题设矛盾.     因此  $f$  严格递增.
+
+固定  $x$ , 比较  $f(x)$  与  $x$ .      有 $3$ 种可能性. 
+
+首先可能有  $f(x)>x$ . 单调性蕴涵  $f(f(x))>f(x)>x$ , 然而 $x=f(f(f(x)))>   f(f(x))>f(x)>x$ , 矛盾. 
+
+还可能有  $f(x)<x$ , 这蕴涵  $f(f(x))<   f(x)<x$, $x=f(f(f(x)))<f(f(x))<f(x)<x$ , 这也不可能. 
+
+因此  $f(x)=x$ . 因  $x$  是任意的, 故这证明了函数方程的唯一解是恒等函数  $f(x)=x. \blacksquare$ 
+
 
 
 
