--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,10 +6,19 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.21(...)
+## 2022.7.22(...)
+【题】定义数列$\{x_n\},n\geq1$:$x_1=a,x_{n+1}=x_n^3-3x_n.$
+
+试找出所有实数$a$使得数列收敛.$\blacktriangleright$
+
+（2000  第四题）
+
+## 2022.7.21
 【题】试求极限：$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n.\blacktriangleright$ 
 
-（第九页）
+$\blacktriangleleft$ 不难证明 $n\to\infty,\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\sim1+\frac{1}{3n}+\mathcal{O}\left(\frac{1}{n^2}\right)$
+
+由此可得$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n=e^{\frac{1}{3}}.\blacksquare$ 
 
 ## 2022.7.20
 【题】求满足以下条件的所有连续函数  $f: \mathbb{R} \rightarrow \mathbb{R}:$  对所有  $x \in \mathbb{R} ,  (f \circ f \circ f)(x)=x.\blacktriangleright$ 
