--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,12 +6,34 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.22(...)
+
+## 2022.7.23(...)
+【题】试证明：$\forall k\in\mathbb{N},a_k=\displaystyle\sum_{j=1}^{\infty}\frac{j^{k}}{j!}\notin \mathbb{Q}.\blacktriangleright$
+
+（2002 第7题）
+
+## 2022.7.22
 【题】定义数列$\{x_n\},n\geq1$:$x_1=a,x_{n+1}=x_n^3-3x_n.$
 
 试找出所有实数$a$使得数列收敛.$\blacktriangleright$
 
-（2000  第四题）
+$\blacktriangleleft$ 置  $f(x)=x^{3}-3 x$ . 假定数列收敛至  $\ell$ . 则 $f(\ell)=\ell$ . 
+
+因此,  $\ell \in\{0, \pm 2\}$ . 注意到在不动点$\ell$邻域均有 $\left|f^{\prime}(x)\right|>1$ . 
+
+$\exists N \in \mathbb{N}$ ，$\forall n \geq N$， 对于在这个邻域的  $x_{n}$  ，  如果 $x_{n} \neq \ell$  根据中值定理我们有
+
+$\left|x_{n+1}-\ell\right|=\left|f\left(x_{n}\right)-f(\ell)\right|=\left|f^{\prime}(\theta)\right| \cdot\left|x_{n}-\ell\right|>\left|x_{n}-\ell\right|$ .
+
+因此数列收敛当且仅当对于某些  $n$，  $x_{n}=\ell$  . 
+
+如果 $|a|>2$  那么不难证明  $\left|x_{n+1}\right|>\left|x_{n}\right|>2, n \geq 1$ ，故舍.
+
+因此,  $|a| \leq 2$ . 我们置 $x_{1}=a=2 \cos \varphi$ , 可得 $x_{n}=2 \cos 3^{n-1} \varphi, n \geq 1$ . 
+
+即解方程  $2 \cos 3^{n-1} \varphi=\ell$  , 其中  $\ell=0 ,  \pm 2$ .
+
+最终得到解  $a=2 \cos \frac{\pi k}{2 \cdot 3^{n-1}}, k, n \in \mathbb{N}. \blacksquare$  
 
 ## 2022.7.21
 【题】试求极限：$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n.\blacktriangleright$ 
