--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,11 +6,49 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
+## 2022.7.24(...)
+【题】证明不等式：
 
-## 2022.7.23(...)
+$\sqrt{2 \sqrt[3]{3 \sqrt[4]{4 \ldots \sqrt[n]{n}}}}<2, n \geq 2. \blacktriangleright$
+
+
+
+
+
+
+## 2022.7.23
 【题】试证明：$\forall k\in\mathbb{N},a_k=\displaystyle\sum_{j=1}^{\infty}\frac{j^{k}}{j!}\notin \mathbb{Q}.\blacktriangleright$
 
-（2002 第7题）
+$\blacktriangleleft$ 考虑证明 $\frac{a_k}{e}$ 是整数. 
+
+首先已有 $a_{1}=e$ . 假定 $a_{k}=e \cdot b_{k}, k \leq n$ ， 其中  $b_{k}$  是某整数 . 
+
+于是
+
+$\begin{aligned}
+a_{n+1} &=\sum_{j=1}^{\infty} \frac{j^{n+1}}{j !}=\sum_{j=1}^{\infty} \frac{j^{n}}{(j-1) !}=\sum_{j=0}^{\infty} \frac{(j+1)^{n}}{j !}\\
+&=\sum_{j=1}^{\infty} \sum_{m=0}^{n}\left(\begin{array}{l}
+n \\
+m
+\end{array}\right) \frac{j^{m}}{j !}=\sum_{m=0}^{n}\left(\begin{array}{c}
+n \\
+m
+\end{array}\right) \cdot \sum_{j=0}^{\infty} \frac{j^{m}}{j !}=e+\sum_{m=1}^{n}\left(\begin{array}{c}
+n \\
+m
+\end{array}\right) \cdot \sum_{j=1}^{\infty} \frac{j^{m}}{j^{m}}\\
+&=e+\sum_{m=1}^{n}\left(\begin{array}{l}
+n \\
+m
+\end{array}\right) a_{m}=e\left(1+\sum_{m=1}^{n}\left(\begin{array}{c}
+n \\
+m
+\end{array}\right) b_{m}\right)
+\end{aligned}$
+
+所以  $\frac{a_{n+1}}{e}$  是整数，因此$a_{k} \notin \mathbb{Q}, k \geq 1 .\blacksquare$
+
+
 
 ## 2022.7.22
 【题】定义数列$\{x_n\},n\geq1$:$x_1=a,x_{n+1}=x_n^3-3x_n.$
