--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,12 +6,42 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.24(...)
+## 2022.7.25(...)
+【题】判断下列积分的敛散性：
+
+$\int_{0}^{\infty} \frac{\sin x }{x+\ln x}\,\mathrm{d}x. \blacktriangleright$
+
+## 2022.7.24
 【题】证明不等式：
 
 $\sqrt{2 \sqrt[3]{3 \sqrt[4]{4 \ldots \sqrt[n]{n}}}}<2, n \geq 2. \blacktriangleright$
 
 
+$\blacktriangleleft$ 等价于
+
+$\displaystyle\sum_{k=2}^{n} \frac{1}{k !} \ln k<\ln 2, n \geq 2$ .
+
+由 $\mathbf{Jensen's \  \ inequality}$ 我们有
+
+$\displaystyle\sum_{k=2}^{n} \frac{1}{k !} \ln k \leq \sum_{k=2}^{n} \frac{1}{k !} \cdot \ln \frac{\sum_{k=2}^{n} \frac{1}{k !} \cdot k}{\sum_{k=2}^{n} \frac{1}{k !}}=\sum_{k=2}^{n} \frac{1}{k !} \ln \left(\frac{\sum_{k=1}^{n-1} \frac{1}{k !}}{\sum_{k=2}^{n} \frac{1}{k !}}\right)$ .
+
+注意 $\sum_{k=2}^{n} \frac{1}{k !} \ln k$  是严增的, 从而得到
+
+$\begin{aligned}
+\sum_{k=2}^{n} \frac{1}{k !} \ln k &<\sum_{k=2}^{\infty} \frac{1}{k !} \ln k  \\
+& \leq \lim _{n \rightarrow \infty} \sum_{k=2}^{n} \frac{1}{k !} \ln \left(\frac{\sum_{k=1}^{n-1} \frac{1}{k !}}{\sum_{k=2}^{n} \frac{1}{k !}}\right)=\sum_{k=2}^{\infty} \frac{1}{k !} \ln \left(\frac{\sum_{k=1}^{\infty} \frac{1}{k !}}{\sum_{k=2}^{\infty} \frac{1}{k !}}\right)\\
+&=(e-2) \ln \frac{e-1}{e-2}=(e-2) \ln \left(1+\frac{1}{e-2}\right)
+\end{aligned}$
+
+即转证
+
+$(e-2) \ln \left(1+\frac{1}{e-2}\right)<\ln 2,\left(1+\frac{1}{e-2}\right)^{e-2}<2$
+
+对 $a>-1$ ，$y(x)=(1+a)^{x}$  在$\mathbb{R}$上是凹的 , 因此对 $x \in(0,1)$  它在  $y=1+a x$之下 , 即  $(1+a)^{x}<1+a x, 0<x<1$ . 
+
+故
+
+$\left(1+\frac{1}{e-2}\right)^{e-2}<1+\frac{e-2}{e-2}=2 .\blacksquare$
 
 
 
