--- a/每日一题（竞赛向）.md
+++ b/每日一题（竞赛向）.md
@@ -6,10 +6,24 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.25(...)
+## 2022.7.26(...)
+
+置数列$\left\{a_{n}, n \geq 1\right\}$ ：  $\left[(n+1) a_{n}\right]=\left[n a_{n+1}\right], n \geq 1$  (其中  $[x]$  为取整). 
+
+试证明存在  $c \in \mathbb{R}$  使得对于每个$n \geq 1$ ， $\left|a_{n}-c n\right|<1.\blacktriangleright$  
+
+（2010 第二题）
+
+
+## 2022.7.25
 【题】判断下列积分的敛散性：
 
 $\int_{0}^{\infty} \frac{\sin x }{x+\ln x}\,\mathrm{d}x. \blacktriangleright$
+
+$\blacktriangleleft$本题要注意的是瑕点的隐蔽性.
+
+置 $f(x)=x+\ln x, x \in(0,1]$ . 因  $\displaystyle\lim _{x \rightarrow 0+} f(x)= -\infty$  及  $f(1)=1$ , 由介值性知 $\exists  a \in(0,1),  s.t.  f(a)=0$ . 显然  $\sin a \neq 0$, $f^{\prime}(a)=1+\frac{1}{a} \neq 0$ , 因此  $\frac{\sin x}{x+\ln x} \sim \frac{\sin a}{(x-a) f^{\prime}(a)}$ ,   $x \rightarrow a$ ， 又由$\int_{a}^{1} \frac{d x}{x-a}$  是发散的，故原积分亦是发散的$.\blacksquare$
+
 
 ## 2022.7.24
 【题】证明不等式：
