--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -6,14 +6,21 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.27(...)
+## 2022.7.28(...)
+【题】试求：$\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{n}\left\{\frac{n}{k}\right\}^{2}$，其中 $\{x\}$为取小数部分.$\blacktriangleright$ 
+
+（2006）
+
+
+
+## 2022.7.27
 【题】定义 $R_{k}(n)$: 
 
 $R_{k}(n)=\overbrace{\sqrt{2-\sqrt{2+\sqrt{2+\sqrt{2+\cdots+\sqrt{2+\sqrt{n}}}}}}}^{k \text { square roots }}$
 
 试证明$\displaystyle\lim _{k \rightarrow \infty} R_{k}(2) / R_{k}(3)=3 / 2.\blacktriangleright$ 
 
-（2002  2）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM10973.pdf)$.\blacksquare$
 
 ## 2022.7.26
 
