--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -6,10 +6,20 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.7.28(...)
+
+## 2022.7.29(...)
+【题】试证明：
+
+$\displaystyle\prod_{n=2}^{\infty}\left(\left(\frac{n^{2}-1}{n^{2}}\right)^{2\left(n^{2}-1\right)}\left(\frac{n+1}{n-1}\right)^{n}\right)=\pi.\blacktriangleright$
+
+
+（2007）
+
+
+## 2022.7.28
 【题】试求：$\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{n}\left\{\frac{n}{k}\right\}^{2}$，其中 $\{x\}$为取小数部分.$\blacktriangleright$ 
 
-（2006）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11206.pdf)$.\blacksquare$
 
 
 
