--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -7,13 +7,23 @@
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
-## 2022.7.29(...)
+## 2022.7.30(...)
+【题】试求：
+
+$\displaystyle\sum_{n=1}^{\infty} 4^{n} \sin ^{4}\left(2^{-n} \theta\right).\blacktriangleright$
+
+
+
+（2010）
+
+
+
+## 2022.7.29
 【题】试证明：
 
 $\displaystyle\prod_{n=2}^{\infty}\left(\left(\frac{n^{2}-1}{n^{2}}\right)^{2\left(n^{2}-1\right)}\left(\frac{n+1}{n-1}\right)^{n}\right)=\pi.\blacktriangleright$
 
-
-（2007）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11333.pdf)$.\blacksquare$
 
 
 ## 2022.7.28
