--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -6,15 +6,24 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
+## 2022.7.31(...)
+【题】给定实数列：$a_{n+1}=\exp \left(-\displaystyle\sum_{k=0}^{n} a_{k}\right)$ , $n \geq 0$. 初值$a_0>0$ 
 
-## 2022.7.30(...)
+试求$b$值使得$\displaystyle\sum_{n=0}^{\infty}\left(a_{n}\right)^{b}$ 收敛.
+
+（2014） 
+
+
+
+
+## 2022.7.30
 【题】试求：
 
 $\displaystyle\sum_{n=1}^{\infty} 4^{n} \sin ^{4}\left(2^{-n} \theta\right).\blacktriangleright$
 
 
 
-（2010）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11515.pdf)$.\blacksquare$
 
 
 
