--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -6,10 +6,22 @@
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
+## 2022.8.2(...)
+【题】设 $C_{n}$  为第n个Catalan数, 即 $C_{n}=\frac{1}{n+1}\left(\begin{array}{c}2 n \\ n\end{array}\right)$ . 
 
-## 2022.8.1(...)
+试证明：
+
+(1)  $\displaystyle\sum_{n=0}^{\infty} \frac{2^{n}}{C_{n}}=5+\frac{3 \pi}{2}$ 
+
+(2)  $\displaystyle\sum_{n=0}^{\infty} \frac{3^{n}}{C_{n}}=22+8 \sqrt{3} \pi. \blacktriangleright$  
+
+（2014）
+
+## 2022.8.1
 【题】试求极限：
 $\displaystyle\lim _{n \rightarrow \infty} \sqrt[n]{(2 n-1) ! !}\left(\tan \left(\frac{\pi \sqrt[n+1]{(n+1) !}}{4 \sqrt[n]{n !}}\right)-1\right).\blacktriangleright$
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11771.pdf)$.\blacksquare$
 
 
 ## 2022.7.31
