--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -1,12 +1,28 @@
 #! https://zhuanlan.zhihu.com/p/539856504
 
----
+# 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
 - 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
-## 2022.8.2(...)
+
+---
+
+
+## 2022.8
+
+
+### 2022.8.3(...)  
+【题】是否存在数列 $\{a_{n}\}$使得 $\displaystyle\sum_{n=1}^{\infty} 1/a_{n}$收敛, 且
+
+$\displaystyle\prod_{k=1}^{n} a_{k}<n^{n} ,\forall n\geq1.\blacktriangleright$
+
+（2014）
+
+---
+
+### 2022.8.2
 【题】设 $C_{n}$  为第n个Catalan数, 即 $C_{n}=\frac{1}{n+1}\left(\begin{array}{c}2 n \\ n\end{array}\right)$ . 
 
 试证明：
@@ -15,16 +31,22 @@
 
 (2)  $\displaystyle\sum_{n=0}^{\infty} \frac{3^{n}}{C_{n}}=22+8 \sqrt{3} \pi. \blacktriangleright$  
 
-（2014）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11765.pdf)$.\blacksquare$
 
-## 2022.8.1
+---
+
+### 2022.8.1
 【题】试求极限：
 $\displaystyle\lim _{n \rightarrow \infty} \sqrt[n]{(2 n-1) ! !}\left(\tan \left(\frac{\pi \sqrt[n+1]{(n+1) !}}{4 \sqrt[n]{n !}}\right)-1\right).\blacktriangleright$
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11771.pdf)$.\blacksquare$
 
+---
 
-## 2022.7.31
+## 2022.7
+
+
+### 2022.7.31
 【题】给定实数列：$a_{n+1}=\exp \left(-\displaystyle\sum_{k=0}^{n} a_{k}\right)$ , $n \geq 0$. 初值$a_0>0$ 
 
 试求$b$值使得$\displaystyle\sum_{n=0}^{\infty}\left(a_{n}\right)^{b}$ 收敛.$\blacktriangleright$
@@ -32,31 +54,34 @@ $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11771.pd
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11773.pdf)$.\blacksquare$
 
+---
 
-## 2022.7.30
+### 2022.7.30
 【题】试求：
 
 $\displaystyle\sum_{n=1}^{\infty} 4^{n} \sin ^{4}\left(2^{-n} \theta\right).\blacktriangleright$
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11515.pdf)$.\blacksquare$
 
+---
 
-## 2022.7.29
+### 2022.7.29
 【题】试证明：
 
 $\displaystyle\prod_{n=2}^{\infty}\left(\left(\frac{n^{2}-1}{n^{2}}\right)^{2\left(n^{2}-1\right)}\left(\frac{n+1}{n-1}\right)^{n}\right)=\pi.\blacktriangleright$
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11333.pdf)$.\blacksquare$
 
+---
 
-## 2022.7.28
+### 2022.7.28
 【题】试求：$\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{n}\left\{\frac{n}{k}\right\}^{2}$，其中 $\{x\}$为取小数部分.$\blacktriangleright$ 
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11206.pdf)$.\blacksquare$
 
+---
 
-
-## 2022.7.27
+### 2022.7.27
 【题】定义 $R_{k}(n)$: 
 
 $R_{k}(n)=\overbrace{\sqrt{2-\sqrt{2+\sqrt{2+\sqrt{2+\cdots+\sqrt{2+\sqrt{n}}}}}}}^{k \text { square roots }}$
@@ -65,7 +90,9 @@ $R_{k}(n)=\overbrace{\sqrt{2-\sqrt{2+\sqrt{2+\sqrt{2+\cdots+\sqrt{2+\sqrt{n}}}}}
 
 $\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM10973.pdf)$.\blacksquare$
 
-## 2022.7.26
+---
+
+### 2022.7.26
 
 【题】置数列$\left\{a_{n}, n \geq 1\right\}$ ：  $\left[(n+1) a_{n}\right]=\left[n a_{n+1}\right], n \geq 1$  (其中  $[x]$  为取整). 
 
@@ -94,9 +121,9 @@ $\left|b_{n}-c\right| \leq\left|b_{n}-b_{n+1}\right|+\left|b_{n+1}-c\right|<\fra
 
 即 $\left|\frac{a_{n}}{n}-c\right|<\frac{1}{n} , i.e.,  \left|a_{n}-c n\right|<1, n \geq 1.\blacksquare$ 
 
+---
 
-
-## 2022.7.25
+### 2022.7.25
 【题】判断下列积分的敛散性：
 
 $\int_{0}^{\infty} \frac{\sin x }{x+\ln x}\,\mathrm{d}x. \blacktriangleright$
@@ -105,8 +132,9 @@ $\blacktriangleleft$本题要注意的是瑕点的隐蔽性.
 
 置 $f(x)=x+\ln x, x \in(0,1]$ . 因  $\displaystyle\lim _{x \rightarrow 0+} f(x)= -\infty$  及  $f(1)=1$ , 由介值性知 $\exists  a \in(0,1),  s.t.  f(a)=0$ . 显然  $\sin a \neq 0$, $f^{\prime}(a)=1+\frac{1}{a} \neq 0$ , 因此  $\frac{\sin x}{x+\ln x} \sim \frac{\sin a}{(x-a) f^{\prime}(a)}$ ,   $x \rightarrow a$ ， 又由$\int_{a}^{1} \frac{d x}{x-a}$  是发散的，故原积分亦是发散的$.\blacksquare$
 
+---
 
-## 2022.7.24
+### 2022.7.24
 【题】证明不等式：
 
 $\sqrt{2 \sqrt[3]{3 \sqrt[4]{4 \ldots \sqrt[n]{n}}}}<2, n \geq 2. \blacktriangleright$
@@ -138,10 +166,10 @@ $(e-2) \ln \left(1+\frac{1}{e-2}\right)<\ln 2,\left(1+\frac{1}{e-2}\right)^{e-2}
 
 $\left(1+\frac{1}{e-2}\right)^{e-2}<1+\frac{e-2}{e-2}=2 .\blacksquare$
 
+---
 
 
-
-## 2022.7.23
+### 2022.7.23
 【题】试证明：$\forall k\in\mathbb{N},a_k=\displaystyle\sum_{j=1}^{\infty}\frac{j^{k}}{j!}\notin \mathbb{Q}.\blacktriangleright$
 
 $\blacktriangleleft$ 考虑证明 $\frac{a_k}{e}$ 是整数. 
@@ -174,8 +202,9 @@ m
 所以  $\frac{a_{n+1}}{e}$  是整数，因此$a_{k} \notin \mathbb{Q}, k \geq 1 .\blacksquare$
 
 
+---
 
-## 2022.7.22
+### 2022.7.22
 【题】定义数列$\{x_n\},n\geq1$:$x_1=a,x_{n+1}=x_n^3-3x_n.$
 
 试找出所有实数$a$使得数列收敛.$\blacktriangleright$
@@ -198,14 +227,18 @@ $\left|x_{n+1}-\ell\right|=\left|f\left(x_{n}\right)-f(\ell)\right|=\left|f^{\pr
 
 最终得到解  $a=2 \cos \frac{\pi k}{2 \cdot 3^{n-1}}, k, n \in \mathbb{N}. \blacksquare$  
 
-## 2022.7.21
+---
+
+### 2022.7.21
 【题】试求极限：$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n.\blacktriangleright$ 
 
 $\blacktriangleleft$ 不难证明 $n\to\infty,\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\sim1+\frac{1}{3n}+\mathcal{O}\left(\frac{1}{n^2}\right)$
 
 由此可得$\displaystyle\lim_{n\to \infty}\left(\int_0^1e^{\frac{x^2}{n}}\,\mathrm{d}x\right)^n=e^{\frac{1}{3}}.\blacksquare$ 
 
-## 2022.7.20
+---
+
+### 2022.7.20
 【题】求满足以下条件的所有连续函数  $f: \mathbb{R} \rightarrow \mathbb{R}:$  对所有  $x \in \mathbb{R} ,  (f \circ f \circ f)(x)=x.\blacktriangleright$ 
 
 $\blacktriangleleft$若$f\left(x_{1}\right)=f\left(x_{2}\right)$ , 则  $x_{1}=f\left(f\left(f\left(x_{1}\right)\right)\right)=f\left(f\left(f\left(x_{2}\right)\right)\right)=x_{2}$ , 这证明了  $f$  是一对一的.
@@ -222,10 +255,10 @@ $\blacktriangleleft$若$f\left(x_{1}\right)=f\left(x_{2}\right)$ , 则  $x_{1}=f
 
 因此  $f(x)=x$ . 因  $x$  是任意的, 故这证明了函数方程的唯一解是恒等函数  $f(x)=x. \blacksquare$ 
 
+---
 
 
-
-## 2022.7.19
+### 2022.7.19
 【题】证明:
 
 $\int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} \cos a x \mathrm{~d} x=\sqrt{\pi} \mathrm{e}^{-a^{2} / 4},a>0.\blacktriangleright$ 
@@ -253,10 +286,10 @@ $\displaystyle\sum_{n=0}^{\infty}(-1)^{n} \frac{a^{2 n}}{(2 n) !} \cdot \frac{(2
 $\displaystyle\sum_{n=1}^{\infty} \frac{a^{2 n}}{(2 n) !} \int_{-\infty}^{\infty} \mathrm{e}^{-x^{2}} x^{2 n}=\sqrt{\pi} \sum_{1}^{\infty} \frac{\left(\frac{a^{2}}{4}\right)^{n}}{n !}=\sqrt{\pi} \mathrm{e}^{a^{2 / 4}}<\infty. \blacksquare$
 
 
+---
 
 
-
-## 2022.7.18
+### 2022.7.18
 【题】求满足下式的连续函数  $f:[0,1] \rightarrow \mathbb{R}$  :
 
 $\int_{0}^{1} f(x)(x-f(x)) \mathrm{d} x=\frac{1}{12}$ . $\blacktriangleright$
@@ -275,10 +308,10 @@ $\int_{0}^{1}\left(f(x)-\frac{x}{2}\right)^{2} \mathrm{~d} x=0$
 
 因非负连续函数  $\left(f(x)-\frac{x}{2}\right)^{2}$  是严格正的, 除了函数恒等于 $0$ . 可见满足题目条件的唯一函数是  $f(x)=\frac{x}{2}, x \in[0,1] . \blacksquare$
 
+---
 
 
-
-## 2022.7.17
+### 2022.7.17
 【题】试证明下列方程的实解只有两个: $4^{x}+6^{x^2}=5^x+5^{x^2}$ . $\blacktriangleright$
 
 $\blacktriangleleft$首先注意到$x=1,x=0$是方程的两个解，下面证明没有第三个解。
@@ -292,8 +325,9 @@ $\blacktriangleleft$首先注意到$x=1,x=0$是方程的两个解，下面证明
 
 若  $0<x<1$ , 则  $x c^{x^{2}-1}<x c^{x-1}$ . 我们来证明  $x c^{x-1}<(10-c)^{x-1}$ . 作代换  $y=x-1, y \in(-1,0)$ , 不等式可改写为  $y+1<\left(\frac{10-c}{c}\right)^{y}$ . 指数的底数小于 $1$ , 从而它递减, 而左边的线性函数递增. 两边在  $y=0$  时相等. 推出不等式. 利用它我们再断定  $x c^{x^{2}-1} \neq(10-c)^{x-1}$ . 这证明了题目中的方程的第3个解不存在. 因此已知方程的唯一解是$x=0$与$x=1. \blacksquare$
 
+---
 
-## 2022.7.16
+### 2022.7.16
 【题】令  $x$  是实数, 定义数列  $\left(x_{n}\right)_{n \geqslant 1}$  , $x_{1}=1$ , 对  $n \geqslant 1$ ,  $x_{n+1}=x^{n}+n x_{n}$ . 
 
 试求：$\displaystyle\prod_{n=1}^{\infty}\left(1-\frac{x^{n}}{x_{n+1}}\right)$ . $\blacktriangleright$
@@ -313,9 +347,9 @@ $\frac{1}{P_{N+1}}=\frac{1}{P_1}+\displaystyle\sum_{n=1}^{N}\left(\frac{1}{P_{n+
 $\displaystyle\prod_{n=1}^{\infty}\left(1-\frac{x^{n}}{x_{n+1}}\right)=e^{-x}. \blacksquare$
 
 
+---
 
-
-## 2022.7.15
+### 2022.7.15
 【题】 已知数列$\{a_n\}:1,2,2,3,3,3,4,4,4,4,5,5,5,5,5, \cdots$
 
 试求$\displaystyle\lim _{n\to \infty}\frac{a_n}{\sqrt{n} }$ . $\blacktriangleright$
@@ -337,8 +371,9 @@ $a_{m}=\left\lfloor\sqrt{2 m}+\frac{1}{2}\right\rfloor, m \geqslant 1$.
 从而$\displaystyle\lim _{n\to \infty}\frac{a_n}{\sqrt{n} }=\sqrt{2}$. $\blacksquare$
 
 
+---
 
-## 2022.7.14
+### 2022.7.14
 【题】 若  $x+y+z=0$ , 证明:
 
 $\frac{x^{2}+y^{2}+z^{2}}{2} \cdot \frac{x^{5}+y^{5}+z^{5}}{5}=\frac{x^{7}+y^{7}+z^{7}}{7}$.  $\blacktriangleright$
@@ -363,10 +398,10 @@ x^{7}+y^{7}+z^{7}&=-p\left(x^{5}+y^{5}+z^{5}\right)-q\left(x^{4}+y^{4}+z^{4}\rig
 
 $\frac{-2 p}{2} \cdot \frac{5 p q}{5}=\frac{-7 p^{2} q}{7}.\blacksquare$  
 
+---
 
 
-
-## 2022.7.13
+### 2022.7.13
 【题】设  $\lambda_{1}, \cdots, \lambda_{n}$  为不同的实数, 且不同于  $0,-1,-2,\cdots,-(n-1)$. 试证明
 $$
 \left|\begin{array}{cccc}
@@ -397,10 +432,10 @@ $\frac{c_{0}}{\lambda_{i}}+\frac{c_{1}}{\lambda_{i}+1}+\frac{c_{2}}{\lambda_{i}+
 
 事实上, 若  $c_{i} \neq 0$ , 则当  $\lambda \rightarrow-i, \frac{c_{i}}{\lambda+i} \rightarrow \pm \infty, f(\lambda) \rightarrow \infty$  与  $f(\lambda)=0$  相矛盾. 于是, 我们证明了所有  $c_{i}$  等于零, 这与假设相矛盾.  $\blacksquare$
 
+---
 
 
-
-## 2022.7.12
+### 2022.7.12
 
 【题】试求$\displaystyle\lim _{t \rightarrow 0^{+}} \frac{\displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}}{\ln t}$ $\blacktriangleright$
 
@@ -424,8 +459,9 @@ $\begin{aligned}
 $\displaystyle\lim _{t \rightarrow 0^{+}} \frac{\displaystyle\sum_{n=1}^{\infty} \frac{\mathrm{e}^{-n^{2} t}}{n}}{\ln t}=\lim _{t \rightarrow 0^{+}} \frac{\int_{\sqrt{t}}^{1} \frac{\mathrm{d} x}{x}}{\ln t}=-\frac{1}{2}   .  \blacksquare$    
 
 
+---
 
-## 2022.7.11
+### 2022.7.11
 
 【题】用  $M$  表示使级数  $\displaystyle\sum_{n=0}^{\infty} \sin (n ! \pi x)$ 收敛的点集, $x \in \mathbb{R}$ . 试证明:
 
@@ -470,8 +506,9 @@ $\begin{aligned}
 而级数 $\displaystyle\sum_{n=2}^{\infty} \theta_{n}=\sum_{n=2}^{\infty} O\left(\frac{1}{n^{2}}\right)$  绝对收敛. 
 因此级数  $\displaystyle\sum^{\infty}_{n=0} \sin (n ! \pi \mathrm{e})$  是收敛的, 即$\mathrm{e} \in M$ .$\blacksquare$
 
+---
 
-## 2022.7.10
+### 2022.7.10
 
 【题】试证明$\displaystyle\sum_{n=1}^{\infty} \frac{(-1)^{\left[2^{n} x\right]}}{2^{n}}=1+2[x]-2x,x\geq 0$. $\blacktriangleright$ 
 
@@ -488,3 +525,4 @@ $\begin{aligned} \displaystyle\sum_{n=1}^{\infty} \frac{(-1)^{\left[2^{n} x\righ
 =1-2(x-[x])=1+2[x]-2x .\blacksquare
 \end{aligned}$ 
 
+---
