--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,13 +12,23 @@
 
 ## 2022.8
 
+## 2022.8.4(...)
+【题】证明存在可微函数 $f: \mathbb{R}  \to  \mathbb{R}$  满足 
 
-### 2022.8.3(...)  
+$2 \cos (x+f(x))-\cos (x)=1 ,\forall x\in \mathbb{R}.$ 且 $f(\pi / 2)=-\pi / 6.\blacktriangleright$
+
+
+（2016）
+
+---
+
+
+### 2022.8.3
 【题】是否存在数列 $\{a_{n}\}$使得 $\displaystyle\sum_{n=1}^{\infty} 1/a_{n}$收敛, 且
 
 $\displaystyle\prod_{k=1}^{n} a_{k}<n^{n} ,\forall n\geq1.\blacktriangleright$
 
-（2014）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11748.pdf)$.\blacksquare$
 
 ---
 
