--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,13 +12,23 @@
 
 ## 2022.8
 
-## 2022.8.4(...)
+### 2022.8.5(...)
+【题】设二阶可导函数$f:[0,1] \to  \mathbb{R}$, $f''$ 在$[0,1]$上连续且$\int_{1 / 3}^{2 / 3} f(x) d x=0$ .
+
+试证明
+
+$4860\left(\int_{0}^{1} f(x) d x\right)^{2} \leq 11 \int_{0}^{1}\left(f^{\prime \prime}(x)\right)^{2} d x.\blacktriangleright$
+
+
+---
+
+### 2022.8.4
 【题】证明存在可微函数 $f: \mathbb{R}  \to  \mathbb{R}$  满足 
 
 $2 \cos (x+f(x))-\cos (x)=1 ,\forall x\in \mathbb{R}.$ 且 $f(\pi / 2)=-\pi / 6.\blacktriangleright$
 
 
-（2016）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11949.pdf)$.\blacksquare$
 
 ---
 
