--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,13 +12,24 @@
 
 ## 2022.8
 
-### 2022.8.5(...)
+### 2022.8.6(...)
+【题】置$L=\displaystyle\lim _{n \rightarrow \infty} \int_{0}^{1} \sqrt[n]{x^{n}+(1-x)^{n}} d x$.
+
+$(1)$ 试求出 $L$ .
+
+$(2)$ 试求 $\displaystyle\lim _{n \rightarrow \infty} n^{2}\left(\int_{0}^{1} \sqrt[n]{x^{n}+(1-x)^{n}} d x-L\right).\blacktriangleright$
+
+---
+
+### 2022.8.5
 【题】设二阶可导函数$f:[0,1] \to  \mathbb{R}$, $f''$ 在$[0,1]$上连续且$\int_{1 / 3}^{2 / 3} f(x) d x=0$ .
 
-试证明
+试证明：
 
 $4860\left(\int_{0}^{1} f(x) d x\right)^{2} \leq 11 \int_{0}^{1}\left(f^{\prime \prime}(x)\right)^{2} d x.\blacktriangleright$
 
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11946.pdf)$.\blacksquare$
 
 ---
 
