--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,12 +12,24 @@
 
 ## 2022.8
 
-### 2022.8.6(...)
+### 2022.8.7(...)
+【题】试求
+
+$\displaystyle\sum_{k=1}^{\infty}\left(1+\frac{1}{2}+\cdots+\frac{1}{k}-\log (k)-\gamma-\frac{1}{2 k}+\frac{1}{12 k^{2}}\right)$
+
+其中 $\gamma$ 为欧拉常数.$\blacktriangleright$
+
+---
+
+### 2022.8.6
 【题】置$L=\displaystyle\lim _{n \rightarrow \infty} \int_{0}^{1} \sqrt[n]{x^{n}+(1-x)^{n}} d x$.
 
 $(1)$ 试求出 $L$ .
 
 $(2)$ 试求 $\displaystyle\lim _{n \rightarrow \infty} n^{2}\left(\int_{0}^{1} \sqrt[n]{x^{n}+(1-x)^{n}} d x-L\right).\blacktriangleright$
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11941.pdf)$.\blacksquare$
+
 
 ---
 
