--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,12 +12,25 @@
 
 ## 2022.8
 
-### 2022.8.7(...)
+### 2022.8.8(...)
+【题】设函数$f: \mathbb{Z}^{+} \to  \mathbb{R}^{+}$ 满足  $\displaystyle\lim _{n \rightarrow \infty} f(n) / n=a,   a>0 .$ 
+
+试求
+
+$\displaystyle\lim _{n \rightarrow \infty}\left(\sqrt[n+1]{\prod_{k=1}^{n+1} f(k)}-\sqrt[n]{\prod_{k=1}^{n} f(k)}\right).\blacktriangleright$
+
+
+---
+
+### 2022.8.7
 【题】试求
 
 $\displaystyle\sum_{k=1}^{\infty}\left(1+\frac{1}{2}+\cdots+\frac{1}{k}-\log (k)-\gamma-\frac{1}{2 k}+\frac{1}{12 k^{2}}\right)$
 
 其中 $\gamma$ 为欧拉常数.$\blacktriangleright$
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11939.pdf)$.\blacksquare$
+
 
 ---
 
