--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,13 +12,23 @@
 
 ## 2022.8
 
-### 2022.8.8(...)
+### 2022.8.9(...)
+【题】试求
+$\displaystyle\sum_{k=1}^{\infty} \frac{(-1)^{\lfloor\sqrt{k}+\sqrt{k+1}\rfloor}}{k(k+1)}.\blacktriangleright$
+
+（2017）
+
+---
+
+### 2022.8.8
 【题】设函数$f: \mathbb{Z}^{+} \to  \mathbb{R}^{+}$ 满足  $\displaystyle\lim _{n \rightarrow \infty} f(n) / n=a,   a>0 .$ 
 
 试求
 
 $\displaystyle\lim _{n \rightarrow \infty}\left(\sqrt[n+1]{\prod_{k=1}^{n+1} f(k)}-\sqrt[n]{\prod_{k=1}^{n} f(k)}\right).\blacktriangleright$
 
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11935.pdf)$.\blacksquare$
 
 ---
 
