--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,11 +12,21 @@
 
 ## 2022.8
 
-### 2022.8.9(...)
+### 2022.8.10(...)
+【题】
+设 $0<x_{0}<\pi ,   x_{n}=\displaystyle\frac{1}{n} \sum_{k=0}^{n-1} \sin \left(x_{k}\right)$ .  
+
+试求
+$\displaystyle\lim _{n \rightarrow \infty} x_{n} \sqrt{\ln (n)}.\blacktriangleright$ 
+
+
+---
+
+### 2022.8.9
 【题】试求
 $\displaystyle\sum_{k=1}^{\infty} \frac{(-1)^{\lfloor\sqrt{k}+\sqrt{k+1}\rfloor}}{k(k+1)}.\blacktriangleright$
 
-（2017）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11999.pdf)$.\blacksquare$
 
 ---
 
