--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,12 +12,28 @@
 
 ## 2022.8
 
-### 2022.8.10(...)
+### 2022.8.11(...)
+【题】试求出下式最小值：
+
+$\frac{\int_{0}^{1} x^{2}\left(f^{\prime}(x)\right)^{2} d x}{\int_{0}^{1} x^{2}(f(x))^{2} d x}$
+
+其中$f$为非零连续可导函数 $f:[0,1] \rightarrow \mathbb{R}$  且  $f(1)=0.\blacktriangleright$ 
+
+（2020）
+
+---
+
+
+
+
+### 2022.8.10
 【题】
 设 $0<x_{0}<\pi ,   x_{n}=\displaystyle\frac{1}{n} \sum_{k=0}^{n-1} \sin \left(x_{k}\right)$ .  
 
 试求
 $\displaystyle\lim _{n \rightarrow \infty} x_{n} \sqrt{\ln (n)}.\blacktriangleright$ 
+
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM11995.pdf)$.\blacksquare$
 
 
 ---
