--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -3,7 +3,7 @@
 # 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
@@ -12,14 +12,53 @@
 
 ## 2022.8
 
-### 2022.8.11(...)
+### 2022.8.14(...)
+【题】设实数列$\left(a_{n}\right)_{n \geq 1}$  满足 $\left(a_{n}+a_{n}^{-1}\right)_{n \geq 1}$ 是收敛的.
+
+试证明$\left(a_{n}\right)_{n \geq 1}$ 是收敛的.$\blacktriangleright$
+
+---
+
+### 2022.8.13
+【题】设实数列$\left(x_{n}\right)_{n \geq 1}$ 满足   $\displaystyle\lim _{n \rightarrow \infty}\left(x_{2 n}+x_{2 n+1}\right)=  315$ 且  $\displaystyle\lim _{n \rightarrow \infty}\left(x_{2 n}+x_{2 n-1}\right)=2003 .$
+
+试求 $\displaystyle\lim _{n \rightarrow \infty}\left(x_{2 n} / x_{2 n+1}\right) .\blacktriangleright$
+
+$\blacktriangleleft$
+设  $a_{n}=x_{2 n}$  ，  $b_{n}=x_{2 n+1}$ 
+
+注意到
+
+$\frac{a_{n+1}-a_{n}}{b_{n+1}-b_{n}}=\frac{\left(x_{2 n+2}+x_{2 n+1}\right)-\left(x_{2 n+1}+x_{2 n}\right)}{\left(x_{2 n+3}+x_{2 n+2}\right)-\left(x_{2 n+2}+x_{2 n+1}\right)} \longrightarrow \frac{2003-315}{315-2003}=-1,n\to\infty$
+
+因此, 据 $\mathbf{Stolz}定理$, 该极限为  $-1$ $.\blacksquare$
+
+
+---
+
+### 2022.8.12
+【题】试证明$(p\geq0)$
+
+$\displaystyle\lim _{n \rightarrow \infty} \frac{\left(1^{1^{p}} \cdot 2^{2^{p}} \cdots n^{n^{p}}\right)^{1 / n^{p+1}}}{n^{1 /(p+1)}}=\mathrm{e}^{-1 /(p+1)^{2}}.\blacktriangleright$
+
+$\blacktriangleleft$
+
+提示：对$f(x)=\frac{x^{p+1}\ln x}{p+1}-\frac{x^{p+1}}{(p+1)^2}在$$[k,k+1],1\leq k\leq n$上用中值定理。
+
+拓展：试考虑其差分极限值。
+
+
+---
+
+
+### 2022.8.11
 【题】试求出下式最小值：
 
 $\frac{\int_{0}^{1} x^{2}\left(f^{\prime}(x)\right)^{2} d x}{\int_{0}^{1} x^{2}(f(x))^{2} d x}$
 
 其中$f$为非零连续可导函数 $f:[0,1] \rightarrow \mathbb{R}$  且  $f(1)=0.\blacktriangleright$ 
 
-（2020）
+$\blacktriangleleft$[Answer](http://www.mat.uniroma2.it/~tauraso/AMM/AMM12205.pdf)$.\blacksquare$
 
 ---
 
