--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,10 +12,38 @@
 
 ## 2022.8
 
-### 2022.8.14(...)
+### 2022.8.15(...)
+【题】 设 $f, g: \mathbb{R} \rightarrow \mathbb{R}$ 周期分别为 $a$  ,  $b$ . 且 $\displaystyle\lim _{x \rightarrow 0} f(x) / x=u \in \mathbb{R}$  ,  $\displaystyle\lim _{x \rightarrow 0} g(x) / x=v \in \mathbb{R} \backslash\{0\}$. 
+
+试求
+
+$\displaystyle\lim _{n \rightarrow \infty} \frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)}$
+
+
+---
+
+### 2022.8.14
 【题】设实数列$\left(a_{n}\right)_{n \geq 1}$  满足 $\left(a_{n}+a_{n}^{-1}\right)_{n \geq 1}$ 是收敛的.
 
 试证明$\left(a_{n}\right)_{n \geq 1}$ 是收敛的.$\blacktriangleright$
+
+$\blacktriangleleft$
+
+置  $a=\displaystyle\liminf _{n \rightarrow \infty} a_{n}$  ， $A=\displaystyle\limsup _{n \rightarrow \infty} a_{n}$ . 
+
+则$a$  和  $A$  都存在且有限.
+
+若 $A=+\infty$的话 ， 我们得到矛盾  $a_{n}+a_{n}^{-1}>a_{n}$,  而 $\left(a_{n}+a_{n}^{-1}\right)_{n \geq 1}$ 是有界的.
+
+假定$A>a$ . 取子列  $\left(a_{n_{k}}\right)_{k \geq 1}$  and  $\left(a_{m_{k}}\right)_{k \geq 1}$  满足 $a_{n_{k}} \rightarrow A$  ，$a_{m_{k}} \rightarrow a$ , $k \rightarrow \infty$ . 
+
+于是  $a_{n_{k}}+1 / a_{n_{k}} \rightarrow A+   1 / A$ , $a_{m_{k}}+1 / a_{m_{k}} \rightarrow a+1 / a$  .
+
+但是 $\left(a_{n}+a_{n}^{-1}\right)_{n \geq 1}$ 收敛至   $\ell$ . 有
+
+$\ell=A+\frac{1}{A}=a+\frac{1}{a}$ ，矛盾.
+
+故只有$A=a.\blacksquare$
 
 ---
 
